--- a/package.json
+++ b/package.json
@@ -9,15 +9,41 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onLanguage:markdown"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "markdown-linker.helloWorld",
-        "title": "Hello World"
+        "command": "markdown-linker.mdpreview",
+        "title": "Open Readme (Markdown)"
+      },
+      {
+        "command": "markdown-linker.gotomd",
+        "title": "Open Readme and Go to the Specified Target"
       }
-    ]
+    ],
+    "views": { },
+    "menus": {
+      "editor/context": [
+        {
+          "command": "markdown-linker.mdpreview",
+          "group": "navigation"
+        },
+        {
+          "command": "markdown-linker.gotomd",
+          "group": "navigation",
+          "when": "editorHasSelection && !editorHasMultipleSelections"
+        }
+      ],
+      "explorer/context": [
+        {
+          "command": "markdown-linker.mdpreview",
+          "group": "navigation"
+        }
+      ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
@@ -28,14 +54,15 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.87.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
+    "@types/vscode": "^1.87.0",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
-    "eslint": "^8.56.0",
-    "typescript": "^5.3.3",
     "@vscode/test-cli": "^0.0.6",
-    "@vscode/test-electron": "^2.3.9"
+    "@vscode/test-electron": "^2.3.9",
+    "eslint": "^8.56.0",
+    "typescript": "^5.3.3"
   }
 }
