--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
 		"target": "ES2022",
 		"outDir": "out",
 		"lib": [
-			"ES2022"
+			"ES2022",
+            "DOM",
+            "DOM.Iterable"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
